[package]
name = "cart"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
buddy-alloc = { version = "0.4.1", optional = true }
num = "0.4.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*


[features]
# use `--no-default-features` or comment out next line to disable allocator
default = ["buddy-alloc"]
